# lcd-stuff

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  autogen.sh  config.h.in  configure.in  lcd-stuff.conf  release.sh
cmake/: Findlibetpan.cmake
scripts/: Makefile.am  init-lcd-stuff.debian  init-lcd-stuff.debian.in  mplayer_remote.py
shared/: CMakeLists.txt  Makefile.am  Makefile.in  sockets.c
src/: CMakeLists.txt  Makefile.am  constants.h  global.h  helpfunctions.c  helpfunctions.h  keyfile.c  keyfile.h  lcdlib.c  lcdlib.h  mail.c  mail.h  maillib.c  maillib.h  main.c  main.h  mp3load.c  mp3load.h  mpd.c  mpd.h  mplayer.c  mplayer.h  rss.c  rss.h  screen.c  screen.h  servicethread.c  servicethread.h  util.c  util.h  weather.c  weather.h  weatherlib.c  weatherlib.h
