
MAINTAINERCLEANFILES    = Makefile.in
bin_PROGRAMS            = lcd-stuff 

lcd_stuff_SOURCES       =                               \
    helpfunctions.h					\
    helpfunctions.c					\
    servicethread.c					\
    servicethread.h					\
    main.c                                              \
    main.h                                              \
    mail.c						\
    mail.h						\
    maillib.c						\
    maillib.h						\
    constants.h						\
    global.h						\
    rss.h						\
    rss.c

lcd_stuff_LDADD = ../shared/libLCDstuff.a

# vim: set sw=8 ts=8 noet:
